--- a/app/src/main/res/layout/activity_ladger_list_actiity.xml
+++ b/app/src/main/res/layout/activity_ladger_list_actiity.xml
@@ -47,8 +47,8 @@
                     android:background="@null"
                     android:drawablePadding="10dp"
                     android:hint="Search Company"
+                    android:inputType="textCapCharacters"
                     android:imeOptions="actionDone"
-                    android:inputType="text"
                     android:paddingLeft="10dp"
                     android:singleLine="true"
                     android:textColor="@color/app_black"
