listing of ledger

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -16,6 +16,6 @@
     <color name="green_color">#008000</color>
 
     <color name="white_greyish">#EEEEEE</color>
-    <color name="button_selectorcolor">#9E9E9E</color>
+    <color name="button_selectorcolor">#BBCFD1</color>
     <color name="gray_login">#707070</color>
 </resources>
