--- a/app/src/main/res/layout/activity_ladger_listing.xml
+++ b/app/src/main/res/layout/activity_ladger_listing.xml
@@ -12,6 +12,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@android:color/white"
+       android:layout_marginBottom="70dp"
         android:orientation="vertical">
 
         <include
@@ -64,7 +65,7 @@
                     android:textStyle="bold"
                     android:layout_marginLeft="7dp"
                     android:layout_weight="1"
-                    android:textSize="12dp"
+                    android:textSize="10dp"
                     />
 
                 <TextView
@@ -75,7 +76,7 @@
                     android:textStyle="bold"
                     android:layout_marginLeft="10dp"
                     android:layout_weight="1"
-                    android:textSize="12dp"
+                    android:textSize="10dp"
                     />
                 <TextView
                     android:layout_width="0dp"
@@ -84,7 +85,7 @@
                     android:text="Balance"
                     android:textColor="@color/app_black"
                     android:textStyle="bold"
-                    android:textSize="12dp"
+                    android:textSize="10dp"
                     />
 
             </LinearLayout>
@@ -106,22 +107,21 @@
             </RelativeLayout>
 
 
-            <View
-                android:id="@+id/view_list2"
-                android:layout_width="match_parent"
-                android:layout_height="1dp"
-                android:layout_marginTop="10dp"
-                android:layout_below="@+id/rcSearchProduct"
-                android:background="@color/hint_color"/>
+<!--            <View-->
+<!--                android:id="@+id/view_list2"-->
+<!--                android:layout_width="match_parent"-->
+<!--                android:layout_height="1dp"-->
+<!--                android:layout_marginTop="10dp"-->
+<!--                android:layout_below="@+id/rcSearchProduct"-->
+<!--                android:background="@color/hint_color"/>-->
 
             <LinearLayout
                 android:id="@+id/bottomStrip"
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
                 android:padding="10dp"
-                android:layout_weight="2"
+                android:layout_weight="0.5"
                 android:orientation="horizontal">
-
 
                 <TextView
                     android:layout_width="0dp"
@@ -153,7 +153,7 @@
                     android:layout_marginLeft="10dp"
                     android:textColor="@color/red_color"
                     android:layout_weight="1"
-                    android:textSize="12dp"
+                    android:textSize="10dp"
                     />
 
                 <TextView
@@ -165,7 +165,7 @@
                     android:textColor="@color/green_color"
                     android:layout_marginLeft="10dp"
                     android:layout_weight="1"
-                    android:textSize="12dp" />
+                    android:textSize="10dp" />
 
                 <TextView
                     android:id="@+id/txtBalTotal"
@@ -175,7 +175,7 @@
                     android:layout_height="wrap_content"
                     tools:text="0"
                     android:textStyle="bold"
-                    android:textSize="12dp" />
+                    android:textSize="10dp" />
 
             </LinearLayout>
 
