--- a/app/src/main/res/layout/row_item_ledger.xml
+++ b/app/src/main/res/layout/row_item_ledger.xml
@@ -9,9 +9,11 @@
 
 
         <LinearLayout
+            android:id="@+id/linearBackColor"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:padding="10dp"
+            android:background="@color/hint_color"
             android:orientation="horizontal">
 
 
