multi company manage

--- a/app/src/main/res/layout/activity_forgot_password.xml
+++ b/app/src/main/res/layout/activity_forgot_password.xml
@@ -44,7 +44,7 @@
                             android:layout_centerVertical="true"
                             android:layout_marginStart="50dp"
                             android:text="@string/forgot_password"
-                            android:textColor="#FFCC00"
+                            android:textColor="@color/orange_bc_color"
                             android:textSize="18sp"
                             android:textStyle="bold" />
                     </RelativeLayout>
