--- a/app/src/main/res/layout/activity_add_company.xml
+++ b/app/src/main/res/layout/activity_add_company.xml
@@ -11,12 +11,12 @@
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="@color/orange_bc_color">
+            android:background="@color/colorAccent">
 
             <androidx.cardview.widget.CardView
                 android:id="@+id/cv"
-                android:layout_width="340dp"
-                android:layout_height="wrap_content"
+                android:layout_width="300dp"
+                android:layout_height="320dp"
                 android:layout_centerInParent="true"
                 app:cardCornerRadius="6dp"
                 app:cardElevation="3dp"
@@ -32,13 +32,18 @@
                         android:layout_height="45dp"
                         android:layout_marginTop="10dp">
 
+                        <View
+                            android:layout_width="8dp"
+                            android:layout_height="match_parent"
+                            android:layout_alignParentStart="true"
+                            android:background="#2fa881" />
 
                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_centerVertical="true"
-                            android:layout_marginStart="30dp"
-                            android:text="@string/change_passowrd"
+                            android:layout_marginStart="50dp"
+                            android:text="Add New Company"
                             android:textColor="@color/colorAccent"
                             android:textSize="18sp"
                             android:textStyle="bold" />
@@ -56,66 +61,20 @@
                         <com.google.android.material.textfield.TextInputLayout
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:textColorHint="#c5c5c5"
-                            app:passwordToggleEnabled="true"
-                            android:background="@null"
-                            android:hint="@null"
-                            android:layout_centerInParent="true"
-                            app:hintEnabled="false"
-                            app:passwordToggleTint="@color/orange_bc_color">
+                            android:textColorHint="#c5c5c5">
 
-                            <com.google.android.material.textfield.TextInputEditText
-                                android:id="@+id/et_old_pass"
+                            <EditText
+                                android:id="@+id/et_company"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:background="@drawable/selector_bg_edit"
-                                android:hint="@string/old_assword"
-                                android:inputType="textPassword"
+                                android:hint="Company Name"
+                                android:inputType="textPersonName"
                                 android:paddingBottom="2dp"
                                 android:textColor="#2fa881"
                                 android:textCursorDrawable="@drawable/bg_input_cursor"
                                 android:textSize="18sp" />
                         </com.google.android.material.textfield.TextInputLayout>
-
-
-
-                    </LinearLayout>
-
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="50dp"
-                        android:layout_marginTop="10dp"
-                        android:orientation="horizontal"
-                        android:paddingStart="50dp"
-                        android:paddingEnd="30dp">
-
-
-                        <com.google.android.material.textfield.TextInputLayout
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:textColorHint="#c5c5c5"
-                            app:passwordToggleEnabled="true"
-                            android:background="@null"
-                            android:hint="@null"
-                            android:layout_centerInParent="true"
-                            app:hintEnabled="false"
-                            app:passwordToggleTint="@color/orange_bc_color">
-
-                            <com.google.android.material.textfield.TextInputEditText
-                                android:id="@+id/et_new_pass"
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                android:background="@drawable/selector_bg_edit"
-                                android:hint="@string/new_password"
-                                android:inputType="textPassword"
-                                android:paddingBottom="2dp"
-                                android:textColor="#2fa881"
-                                android:textCursorDrawable="@drawable/bg_input_cursor"
-                                android:textSize="18sp" />
-                        </com.google.android.material.textfield.TextInputLayout>
-
-
-
                     </LinearLayout>
 
                     <LinearLayout
@@ -125,46 +84,41 @@
                         android:paddingStart="50dp"
                         android:paddingEnd="30dp">
 
+
                         <com.google.android.material.textfield.TextInputLayout
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:textColorHint="#c5c5c5"
-                            app:passwordToggleEnabled="true"
-                            android:background="@null"
-                            android:hint="@null"
-                            android:layout_centerInParent="true"
-                            app:hintEnabled="false"
-                            app:passwordToggleTint="@color/orange_bc_color">
+                            android:textColorHint="#c5c5c5">
 
-                            <com.google.android.material.textfield.TextInputEditText
-                                android:id="@+id/et_confirm_password"
+                            <EditText
+                                android:id="@+id/et_gst"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:background="@drawable/selector_bg_edit"
-                                android:hint="@string/conf_password"
-                                android:inputType="textPassword"
+                                android:hint="GST No"
+                                android:inputType="textCapCharacters"
                                 android:paddingBottom="2dp"
                                 android:textColor="#2fa881"
                                 android:textCursorDrawable="@drawable/bg_input_cursor"
                                 android:textSize="18sp" />
                         </com.google.android.material.textfield.TextInputLayout>
+
+
                     </LinearLayout>
 
                     <RelativeLayout
                         android:layout_width="match_parent"
                         android:layout_height="60dp"
-                        android:layout_marginTop="35dp"
-                        android:layout_marginBottom="20dp"
+                        android:layout_marginTop="25dp"
                         android:gravity="center">
 
                         <Button
-                            android:id="@+id/bt_submit"
+                            android:id="@+id/btAddCompany"
                             android:layout_width="150dp"
                             android:layout_height="50dp"
                             android:background="@drawable/bt_shape"
                             android:stateListAnimator="@drawable/state_list_animator_z"
-                            android:text="@string/submit"
-
+                            android:text="Add Company"
                             android:textColor="@color/colorPrimary"></Button>
                     </RelativeLayout>
 
