--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -55,10 +55,22 @@
                     android:layout_width="match_parent"
                     android:layout_height="0.5dp"
                     android:background="@color/hint_color"/>
+
+                <TextView
+                    android:id="@+id/txtComName"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginEnd="8dp"
+                    android:layout_marginStart="8dp"
+                    android:layout_gravity="center"
+                    android:gravity="center"
+                    android:layout_marginTop="20dp"
+                    android:textAppearance="@android:style/TextAppearance.Material.Title"
+                    android:text="com name" />
                 <ImageView
                     android:layout_width="match_parent"
                     android:layout_height="300dp"
-                    android:layout_marginTop="120dp"
+                    android:layout_marginTop="30dp"
                     android:src="@drawable/esc_logo">
 
                 </ImageView>
@@ -68,7 +80,7 @@
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
                     android:gravity="center"
-                    android:visibility="gone"
+                    android:visibility="visible"
                     android:orientation="vertical">
 
 
@@ -83,7 +95,7 @@
                             android:layout_width="150dp"
                             android:layout_height="70dp"
                             android:layout_gravity="center_horizontal"
-                            android:layout_marginTop="30dp"
+                            android:layout_marginTop="60dp"
                             android:layout_marginBottom="20dp"
                             android:background="@color/colorAccent"
                             android:stateListAnimator="@drawable/state_list_animator_z"
@@ -94,14 +106,14 @@
 
 
                             <Button
-                                android:id="@+id/btnGetCom"
+                                android:id="@+id/btnMyCom"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:layout_gravity="center"
                                 android:background="@color/colorAccent"
                                 android:backgroundTint="@color/colorAccent"
                                 android:stateListAnimator="@drawable/state_list_animator_z"
-                                android:text="Get Company"
+                                android:text="My Companies"
 
                                 android:textColor="@color/white_color" />
 
