--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -36,7 +36,7 @@
                             android:layout_marginStart="8dp"
                             android:src="@drawable/esc_logo"/>
                         <TextView
-                            android:id="@+id/wm_name"
+                            android:id="@+id/txtname"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginEnd="8dp"
@@ -44,7 +44,7 @@
                             android:layout_gravity="center"
                             android:gravity="center"
                             android:textAppearance="@android:style/TextAppearance.Material.Title"
-                            android:text="Home" />
+                            android:text="fgfghg" />
 
                     </LinearLayout>
                 </androidx.appcompat.widget.Toolbar>
