--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -38,7 +38,7 @@
                             android:layout_marginStart="8dp"
                             android:src="@drawable/esc_logo"/>
                         <TextView
-                            android:id="@+id/wm_name"
+                            android:id="@+id/txtname"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginEnd="8dp"
@@ -62,11 +62,12 @@
                     android:layout_height="wrap_content"
                     android:layout_marginEnd="8dp"
                     android:layout_marginStart="8dp"
+                    android:visibility="gone"
                     android:layout_gravity="center"
                     android:gravity="center"
                     android:layout_marginTop="20dp"
                     android:textAppearance="@android:style/TextAppearance.Material.Title"
-                    android:text="com name" />
+                    android:text="" />
                 <ImageView
                     android:layout_width="match_parent"
                     android:layout_height="300dp"
