--- a/app/src/main/res/layout/fragment_trail_balance.xml
+++ b/app/src/main/res/layout/fragment_trail_balance.xml
@@ -59,11 +59,68 @@
 
 
 
-                <RelativeLayout
+                <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-
                     android:orientation="vertical">
+
+                    <LinearLayout
+                        android:id="@+id/dateLayout"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_below="@+id/rcSearchProduct"
+                        android:layout_gravity="center"
+                        android:gravity="center"
+                        android:layout_marginLeft="10dp"
+                        android:layout_marginRight="10dp"
+                        android:layout_marginTop="150dp"
+                        android:orientation="horizontal"
+                        android:visibility="visible">
+
+                        <EditText
+                            android:id="@+id/fromDate"
+                            android:layout_width="0dp"
+                            android:layout_height="wrap_content"
+                            android:layout_margin="10dp"
+                            android:layout_weight="1"
+                            android:background="@drawable/strock"
+                            android:focusable="false"
+                            android:hint="Select From Date"
+                            android:padding="12dp"
+                            android:text=""
+
+                            android:textSize="10sp" />
+
+                        <EditText
+                            android:id="@+id/toDate"
+                            android:layout_width="0dp"
+                            android:layout_height="wrap_content"
+                            android:layout_margin="10dp"
+                            android:layout_weight="1"
+                            android:background="@drawable/strock"
+                            android:focusable="false"
+                            android:hint="Select To Date"
+                            android:padding="12dp"
+                            android:text=""
+                            android:textSize="10sp" />
+
+                        <Button
+                            android:id="@+id/submit"
+                            android:layout_width="0dp"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="center"
+                            android:layout_marginTop="20dp"
+                            android:layout_marginRight="5dp"
+                            android:layout_marginBottom="20dp"
+                            android:layout_weight="1"
+                            android:background="@color/colorAccent"
+                            android:gravity="center"
+                            android:visibility="gone"
+                            android:stateListAnimator="@drawable/state_list_animator_z"
+                            android:text="Go"
+                            android:textColor="@color/white_color" />
+
+                    </LinearLayout>
 
 
                     <LinearLayout
@@ -71,11 +128,13 @@
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
                         android:gravity="center"
-                        android:layout_marginTop="500dp"
+                        android:layout_marginTop="50dp"
                         android:layout_centerInParent="true"
                         android:layout_centerHorizontal="true"
                         android:layout_centerVertical="true"
                         android:orientation="horizontal">
+
+
 
 
                         <androidx.cardview.widget.CardView
@@ -100,7 +159,7 @@
                                 android:background="@color/colorAccent"
                                 android:backgroundTint="@color/colorAccent"
                                 android:stateListAnimator="@drawable/state_list_animator_z"
-                                android:text="Get Company Trail Balance"
+                                android:text="Get Trail Balance"
                                 android:textColor="@color/white_color" />
 
                         </androidx.cardview.widget.CardView>
@@ -167,7 +226,7 @@
                     </LinearLayout>
 
                     <!--                </androidx.cardview.widget.CardView>-->
-                </RelativeLayout>
+                </LinearLayout>
             </LinearLayout>
         </ScrollView>
 
