--- a/app/src/main/res/layout/activity_trial_balance_listing_activites.xml
+++ b/app/src/main/res/layout/activity_trial_balance_listing_activites.xml
@@ -121,6 +121,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="0dp"
                     android:padding="10dp"
+                    android:gravity="top"
                     android:layout_weight="1.2"
                     android:orientation="horizontal">
 
@@ -150,10 +151,13 @@
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         tools:text="0"
+                        android:layout_gravity="top"
+                        android:gravity="top"
                         android:textStyle="bold"
                         android:layout_marginLeft="10dp"
                         android:textColor="@color/red_color"
                         android:layout_weight="1"
+                        android:layout_marginTop="-15dp"
                         android:textSize="8dp"
                         />
 
@@ -162,6 +166,7 @@
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         tools:text="0"
+                        android:layout_marginTop="-15dp"
                         android:textStyle="bold"
                         android:textColor="@color/green_color"
                         android:layout_marginLeft="10dp"
