--- a/app/src/main/res/layout/row_item_ledger.xml
+++ b/app/src/main/res/layout/row_item_ledger.xml
@@ -41,10 +41,11 @@
                 android:id="@+id/txtAmount"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:text=""
+                android:text="87484808"
+                android:layout_marginRight="10dp"
                 android:textColor="@color/red_color"
-                android:layout_marginLeft="10dp"
                 android:layout_weight="1"
+                android:gravity="right"
                 android:textSize="8dp"
                 />
             <TextView
@@ -53,6 +54,7 @@
                 android:layout_weight="1"
                 android:layout_height="wrap_content"
                 android:text=""
+                android:gravity="right"
                 android:textColor="@color/green_color"
                 android:textSize="8dp"
                 />
@@ -64,6 +66,7 @@
                 android:layout_weight="1"
                 android:layout_height="wrap_content"
                 android:text=""
+                android:gravity="right"
                 android:textColor="@color/app_black"
                 android:textSize="8dp"
                 />
