--- a/app/src/main/res/layout/activity_ladger_list_actiity.xml
+++ b/app/src/main/res/layout/activity_ladger_list_actiity.xml
@@ -26,7 +26,6 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="10dp"
-                android:layout_marginRight="20dp"
                 android:orientation="horizontal">
 
                 <ImageView
@@ -62,6 +61,7 @@
                     android:layout_height="wrap_content"
                     android:layout_alignParentRight="true"
                     android:layout_centerVertical="true"
+                    android:padding="20dp"
                     android:src="@drawable/cross" />
 
             </RelativeLayout>
