--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -25,7 +25,7 @@
                     app:layout_collapseMode="pin"
                     android:elevation="3dp">
 
-                    <LinearLayout
+                    <RelativeLayout
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:layout_marginBottom="8dp"
@@ -45,10 +45,22 @@
                             android:layout_marginStart="8dp"
                             android:layout_gravity="center"
                             android:gravity="center"
+                            android:layout_centerInParent="true"
+                            android:layout_toRightOf="@+id/title_m"
                             android:textAppearance="@android:style/TextAppearance.Material.Title"
                             android:text="Home" />
 
-                    </LinearLayout>
+                        <ImageView
+                            android:id="@+id/logout"
+                            android:layout_width="30dp"
+                            android:layout_height="30dp"
+                            android:layout_marginEnd="8dp"
+                            android:layout_marginStart="8dp"
+                            android:layout_alignParentRight="true"
+                            android:tint="@color/colorAccent"
+                            android:layout_centerInParent="true"
+                            app:srcCompat="@android:drawable/ic_lock_power_off"/>
+                    </RelativeLayout>
                 </androidx.appcompat.widget.Toolbar>
 
                 <View
@@ -87,65 +99,49 @@
 
                     <LinearLayout
                         android:layout_width="match_parent"
-                        android:layout_height="120dp"
+                        android:layout_height="wrap_content"
                         android:layout_gravity="center"
                         android:gravity="center"
-                        android:orientation="horizontal">
+                        android:layout_marginLeft="20dp"
+                        android:layout_marginRight="20dp"
+                        android:orientation="vertical">
 
-                        <androidx.cardview.widget.CardView
-                            android:layout_width="150dp"
-                            android:layout_height="70dp"
-                            android:layout_gravity="center_horizontal"
-                            android:layout_marginTop="60dp"
-                            android:layout_marginBottom="20dp"
-                            android:background="@color/colorAccent"
-                            android:stateListAnimator="@drawable/state_list_animator_z"
-                            android:backgroundTint="@color/colorAccent"
-                            app:cardCornerRadius="10dp"
-                            app:cardElevation="5dp"
-                            android:textColor="@color/white_color">
+                        <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="40dp"
+                            android:layout_marginTop="20dp"
+                            android:background="@drawable/strock_unfill_orange">
 
-
-                            <Button
+                            <TextView
                                 android:id="@+id/btnMyCom"
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                android:layout_gravity="center"
-                                android:background="@color/colorAccent"
-                                android:backgroundTint="@color/colorAccent"
-                                android:stateListAnimator="@drawable/state_list_animator_z"
+                                android:layout_width="0dp"
+                                android:layout_height="match_parent"
+                                android:layout_weight="1"
+                                android:gravity="center"
                                 android:text="My Companies"
+                                android:textColor="@color/app_black"
+                                android:textSize="16sp" />
+                        </LinearLayout>
 
-                                android:textColor="@color/white_color" />
 
-                        </androidx.cardview.widget.CardView>
+                        <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="40dp"
+                            android:layout_marginTop="20dp"
+                            android:background="@drawable/strock_unfill_orange">
 
-
-                        <androidx.cardview.widget.CardView
-                            android:layout_width="150dp"
-                            android:layout_height="100dp"
-                            android:layout_gravity="center_horizontal"
-                            android:layout_marginTop="30dp"
-                            android:layout_marginBottom="20dp"
-                            android:background="@color/colorAccent"
-                            android:stateListAnimator="@drawable/state_list_animator_z"
-                            android:backgroundTint="@color/colorAccent"
-                            app:cardCornerRadius="10dp"
-                            app:cardElevation="5dp"
-                            android:layout_marginLeft="20dp"
-                            android:visibility="gone"
-                            android:textColor="@color/white_color">
-
-                            <Button
-                                android:id="@+id/btnProfile"
-                                android:layout_width="150dp"
-                                android:layout_height="100dp"
-                                android:stateListAnimator="@drawable/state_list_animator_z"
+                            <TextView
+                                android:id="@+id/myProfile"
+                                android:layout_width="0dp"
+                                android:layout_height="match_parent"
+                                android:layout_weight="1"
+                                android:gravity="center"
                                 android:text="Profile"
-                                android:layout_gravity="center"
-                                android:background="@color/colorAccent"
-                                android:textColor="@color/white_color"></Button>
-                        </androidx.cardview.widget.CardView>
+                                android:textColor="@color/app_black"
+                                android:textSize="16sp" />
+                        </LinearLayout>
+
+
                     </LinearLayout>
 
                     <LinearLayout
