--- a/app/src/main/res/layout/row_item_trial_balance.xml
+++ b/app/src/main/res/layout/row_item_trial_balance.xml
@@ -12,20 +12,20 @@
             android:id="@+id/linearBackColor"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:padding="10dp"
+            android:padding="12dp"
             android:background="@color/hint_color"
             android:orientation="horizontal">
 
 
-            <TextView
-                android:id="@+id/txtDate"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:text=""
-                android:textColor="@color/app_black"
-                android:layout_weight="1"
-                android:textSize="10dp"
-                />
+<!--            <TextView-->
+<!--                android:id="@+id/txtDate"-->
+<!--                android:layout_width="0dp"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:text=""-->
+<!--                android:textColor="@color/app_black"-->
+<!--                android:layout_weight="1"-->
+<!--                android:textSize="12dp"-->
+<!--                />-->
 
             <TextView
                 android:id="@+id/txtTitle"
@@ -34,7 +34,7 @@
                 android:text=""
                 android:textColor="@color/app_black"
                 android:layout_weight="3"
-                android:textSize="14dp"
+                android:textSize="12dp"
                 />
 
 
@@ -42,13 +42,12 @@
                 android:id="@+id/txtAmount"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:text=""
-                android:gravity="right"
-                android:textColor="@color/red_color"
                 android:layout_marginLeft="10dp"
                 android:layout_weight="1"
-                android:textSize="8dp"
-                />
+                android:gravity="right"
+                android:text=""
+                android:textColor="@color/app_black"
+                android:textSize="14dp" />
             <TextView
                 android:id="@+id/txtCredit"
                 android:layout_width="0dp"
@@ -56,8 +55,8 @@
                 android:layout_height="wrap_content"
                 android:text="dfdf"
                 android:gravity="right"
-                android:textColor="@color/green_color"
-                android:textSize="10dp"
+                android:textColor="@color/app_black"
+                android:textSize="14dp"
                 />
 
         </LinearLayout>
