--- a/app/src/main/res/layout/activity_ladger_listing.xml
+++ b/app/src/main/res/layout/activity_ladger_listing.xml
@@ -61,10 +61,10 @@
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:text="Debit(₹)"
-                    android:textColor="@color/red_color"
+                    android:textColor="@color/app_black"
                     android:textStyle="bold"
                     android:gravity="right"
-                    android:layout_weight="1"
+                    android:layout_weight="1.2"
                     android:textSize="10dp"
                     />
 
@@ -72,16 +72,16 @@
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:text="Credit(₹)"
-                    android:textColor="@color/green_color"
+                    android:textColor="@color/app_black"
                     android:textStyle="bold"
                     android:gravity="right"
                     android:layout_marginLeft="10dp"
-                    android:layout_weight="1"
+                    android:layout_weight="1.2"
                     android:textSize="10dp"
                     />
                 <TextView
                     android:layout_width="0dp"
-                    android:layout_weight="1"
+                    android:layout_weight="1.2"
                     android:layout_height="wrap_content"
                     android:text="Balance"
                     android:gravity="right"
@@ -146,8 +146,6 @@
                         android:layout_height="wrap_content"
                         android:textStyle="bold"
                         android:layout_weight="2"
-
-
                         android:text="Total"
                         android:textColor="@color/app_black"
                         android:textSize="24dp"
@@ -157,7 +155,7 @@
                         android:id="@+id/txtDrTotal"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
-                        android:textColor="@color/red_color"
+                        android:textColor="@color/app_black"
                         android:textStyle="bold"
                         android:layout_gravity="center"
                         android:gravity="right"
@@ -169,25 +167,16 @@
                         android:id="@+id/txtCrTotal"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
-                        android:textColor="@color/green_color"
+                        android:textColor="@color/app_black"
                         android:textStyle="bold"
                         android:layout_gravity="center"
                         android:gravity="right"
+                        android:layout_marginRight="40dp"
                         android:layout_marginLeft="10dp"
                         android:layout_weight="1"
                         android:textSize="10dp"
                         />
-                    <TextView
-                        android:layout_width="0dp"
-                        android:layout_weight="1"
-                        android:layout_height="wrap_content"
-                        android:text=""
-                        android:gravity="right"
-                        android:textColor="@color/app_black"
-                        android:visibility="visible"
-                        android:textStyle="bold"
-                        android:textSize="10dp"
-                        />
+
 
                 </LinearLayout>
 
