--- a/app/src/main/res/layout/row_item_trial_balance.xml
+++ b/app/src/main/res/layout/row_item_trial_balance.xml
@@ -53,7 +53,7 @@
                 android:layout_width="0dp"
                 android:layout_weight="1.3"
                 android:layout_height="wrap_content"
-                android:text="dfdf"
+                android:text=""
                 android:gravity="right"
                 android:textColor="@color/app_black"
                 android:textSize="14dp"
